chore: update README, vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,11 @@
         "luetooth",
         "msedge",
         "nahk",
+        "ocus",
         "ownloads",
         "potify",
-        "rofi"
+        "rofi",
+        "wezterm",
+        "xplorer"
     ]
 }
