--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "devenv",
         "erminal",
         "ertically",
+        "kmonad",
         "luetooth",
         "msedge",
         "nahk",
