main.ahk: add new shortcuts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
         "ownloads",
         "potify",
         "rofi",
+        "taskmgr",
+        "verview",
         "wezterm",
         "xplorer"
     ]
